compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__conditional_compilation__excluded_attribute_syntax.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/conditional_compilation.rs
assertion_line: 5
expression: "@target(javascript)\n  pub fn main() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE
@target(javascript)
  pub fn main() { 1 }


----- COMPILED ERLANG
-module(my@mod).
