compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__conditional_compilation__included_attribute_syntax.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/conditional_compilation.rs
assertion_line: 14
expression: "@target(erlang)\n  pub fn main() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE
@target(erlang)
  pub fn main() { 1 }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    1.
